Added base html code to follow project guidelines and included my topic choice

--- a/index.html
+++ b/index.html
@@ -4,10 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Tribute Page</title>
+    <title>Tribute to the Internet Revolution</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <script src="index.js"></script>
+    <!-- Main Container -->
+    <main id="main">
+
+      <!-- Title -->
+      <h1 id="title">The Internet Revolution</h1>
+
+      <!-- Image Division -->
+      <div id="img-div">
+        <img id="image">
+        <div id="image-caption"></div>
+      </div>
+
+      <!-- Tribute Information -->
+      <div id="tribute-info">
+        <p>
+          The Internet Revolution refers to the rapid advancement of digital      technology and the widespread adoption of the internet in the late 20th and early 21st centuries. This revolution has transformed how we communicate, access information, and conduct business, leading to unprecedented global connectivity and the rise of the information age.
+        </p>
+        <!-- Additional paragraphs about the Internet Revolution -->
+      </div>
+
+      <!-- Tribute Link -->
+      <p>If you want to learn more, you can click here to learn more about the</p>
+      <a id="tribute-link" href="https://www.internetsociety.org/internet/history-internet/brief-history-internet/" target="_blank">
+        History of the Internet
+      </a>
+    </main>
   </body>
 </html>
