Fixed basic HTML formatting

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <!-- Tribute Information -->
       <div id="tribute-info">
         <p>
-          The Internet Revolution refers to the rapid advancement of digital      technology and the widespread adoption of the internet in the late 20th and early 21st centuries. This revolution has transformed how we communicate, access information, and conduct business, leading to unprecedented global connectivity and the rise of the information age.
+          The Internet Revolution refers to the rapid advancement of digital technology and the widespread adoption of the Internet in the late 20th and early 21st centuries. This revolution has transformed how we communicate, access information, and conduct business, leading to unprecedented global connectivity and the rise of the information age.
         </p>
         <!-- Additional paragraphs about the Internet Revolution -->
       </div>
