Added image folder with network.png and fixed CSS path issue.
Finalized basic layout and styling for the tribute page.

--- a/index.html
+++ b/index.html
@@ -5,28 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Tribute to the Internet Revolution</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
-    <script src="index.js"></script>
     <!-- Main Container -->
     <main id="main">
-
       <!-- Title -->
       <h1 id="title">The Internet Revolution</h1>
 
       <!-- Image Division -->
       <div id="img-div">
-        <img id="image">
-        <div id="image-caption"></div>
-      </div>
+        <img id="image" src="images/network.png" alt="Internet of Things">
+        <div id="img-caption">An illustration of Internet of Things devices in use today</div>
+      </div>      
 
       <!-- Tribute Information -->
       <div id="tribute-info">
+        <h2>The Internet Revolution: A Timeline</h2>
         <p>
           The Internet Revolution refers to the rapid advancement of digital technology and the widespread adoption of the Internet in the late 20th and early 21st centuries. This revolution has transformed how we communicate, access information, and conduct business, leading to unprecedented global connectivity and the rise of the information age.
         </p>
-        <!-- Additional paragraphs about the Internet Revolution -->
       </div>
 
       <!-- Tribute Link -->
@@ -35,5 +33,18 @@
         History of the Internet
       </a>
     </main>
+
+    <!-- Footer Section -->
+    <footer id="footer">
+      <p>&copy; 2024 Henry Zeng</p>
+      <p>
+        <a href="#main">Back to Top</a> | 
+        <a href="mailto:thyzeng@gmail.com">Contact Me</a>
+      </p>
+      <p>
+        References: <a href="https://www.internetsociety.org/" target="_blank">Internet Society</a>, 
+        <a href="https://www.webfoundation.org/" target="_blank">Web Foundation</a>
+      </p>
+    </footer>
   </body>
 </html>
